--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
   <footer>
     <div id="ads">
-      <iframe src="link.html"></iframe>
+      <iframe src="links.html"></iframe>
     </div>
     <p>&copy; atualizado eternamente.</p>
   </footer>
